option('enable-glade-catalog', type: 'boolean', value: true, description: 'Install a glade catalog file')
option('enable-python', type: 'boolean', value: true, description: 'Build with python support')
option('enable-deprecations', type: 'boolean', value: false, description: 'warn about deprecated usages')
option('enable-docs', type: 'boolean', value: false, description: 'enable generating documentation')
